tests/baselines/reference/objectLiteralFunctionArgContextualTyping.errors.txt
tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts(8,6): error TS2345: Argument of type '{ hello: number; }' is not assignable to parameter of type 'I'.
  Object literal may only specify known properties, and 'hello' does not exist in type 'I'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts(10,17): error TS2345: Argument of type '{ value: string; what: number; }' is not assignable to parameter of type 'I'.
  Object literal may only specify known properties, and 'what' does not exist in type 'I'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts(11,4): error TS2345: Argument of type '{ toString: (s: string) => string; }' is not assignable to parameter of type 'I'.
  Property 'value' is missing in type '{ toString: (s: string) => string; }' but required in type 'I'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts(12,4): error TS2345: Argument of type '{ toString: (s: string) => string; }' is not assignable to parameter of type 'I'.
  Property 'value' is missing in type '{ toString: (s: string) => string; }' but required in type 'I'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts(13,36): error TS2339: Property 'uhhh' does not exist on type 'string'.


==== tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts (5 errors) ====
    interface I {
        value: string;
        toString: (t: string) => string;
    }
    
    function f2(args: I) { }
    
    f2({ hello: 1 }) // error 
         ~~~~~~~~
!!! error TS2345: Argument of type '{ {|hello|0|}: number; }' is not assignable to parameter of type '{|I|1|}'.
!!! error TS2345:   Object literal may only specify known properties, and 'hello' does not exist in type 'I'.
!!! annotated symbol 0 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:8:6
!!! annotated symbol 1 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:1:11
    f2({ value: '' }) // missing toString satisfied by Object's member
    f2({ value: '', what: 1 }) // missing toString satisfied by Object's member
                    ~~~~~~~
!!! error TS2345: Argument of type '{ {|value|0|}: string; {|what|1|}: number; }' is not assignable to parameter of type '{|I|2|}'.
!!! error TS2345:   Object literal may only specify known properties, and 'what' does not exist in type 'I'.
!!! annotated symbol 0 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:10:6
!!! annotated symbol 1 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:10:17
!!! annotated symbol 2 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:1:11
    f2({ toString: (s) => s }) // error, missing property value from ArgsString
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|toString|0|}: (s: string) => string; }' is not assignable to parameter of type '{|I|1|}'.
!!! error TS2345:   Property 'value' is missing in type '{ toString: (s: string) => string; }' but required in type 'I'.
!!! related TS2728 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:2:5: 'value' is declared here.
!!! annotated symbol 0 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:11:6
!!! annotated symbol 1 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:1:11
    f2({ toString: (s: string) => s }) // error, missing property value from ArgsString
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|toString|0|}: (s: string) => string; }' is not assignable to parameter of type '{|I|1|}'.
!!! error TS2345:   Property 'value' is missing in type '{ toString: (s: string) => string; }' but required in type 'I'.
!!! related TS2728 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:2:5: 'value' is declared here.
!!! annotated symbol 0 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:12:6
!!! annotated symbol 1 tests/cases/compiler/objectLiteralFunctionArgContextualTyping.ts:1:11
    f2({ value: '', toString: (s) => s.uhhh }) // error
                                       ~~~~
!!! error TS2339: Property 'uhhh' does not exist on type 'string'.